fix: api.ts 4
